appId: ${APP_ID}
---
- launchApp:
    stopApp: true
- waitForAnimationToEnd
- assertVisible: '首页'
- tapOn: '刷题'
- assertVisible: '刷题'
- back
- tapOn: '首页'
- tapOn: '刷题'
- tapOn: '刷题'
- assertVisible: '刷题'
