appId: com.android.chrome
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    id: com.android.chrome:id/terms_accept
    optional: true
- tapOn:
    id: com.android.chrome:id/negative_button
    optional: true
- tapOn:
    text: 'No thanks'
    optional: true
- tapOn:
    text: '暂不登录'
    optional: true
- openLink: ${BASE_URL}
- tapOn:
    id: com.android.chrome:id/button_primary
    optional: true
- tapOn:
    id: com.android.chrome:id/button_secondary
    optional: true
- tapOn:
    text: 'OK'
    optional: true
- tapOn:
    text: 'Keep Google'
    optional: true
- assertVisible: '首页|刷题|择校|我的'
- tapOn: '刷题'
- assertVisible: '刷题中心'
- tapOn: '择校'
- assertVisible: '择校'
- tapOn: '我的'
- assertVisible: '我的'
